Added more PloneTrueGallery extensions #7

--- a/themes.cfg
+++ b/themes.cfg
@@ -93,6 +93,9 @@ auto-checkout =
 #    medialog.googlefonts
     Products.Doormat
 
+################# Plone True Gallery
+    collective.js.supersized
+
 eggs = 
 ################# Plone theme skins
     quintagroup.theme.estatelite
@@ -107,6 +110,40 @@ eggs =
     collective.behavior.localdiazo
     collective.behavior.localskin
     openmultimedia.headband
+
+################# Plone True Gallery
+    collective.easyslider
+    collective.plonetruegallery
+    collective.ptg.highslide
+    collective.ptg.fancybox
+    collective.ptg.galleriffic
+    collective.ptg.s3slider
+    collective.ptg.pikachoose
+    collective.ptg.nivoslider
+    collective.ptg.nivogallery
+    collective.ptg.contentflow
+    collective.ptg.supersized
+    collective.ptg.thumbnailzoom
+    collective.ptg.contactsheet
+    collective.ptg.galleria
+    collective.ptg.carousel
+    collective.ptg.uigallery
+    collective.ptg.sheetgallery
+    collective.ptg.scrollable
+    collective.ptg.presentation
+    collective.ptg.allnewest
+    collective.ptg.easyslider
+    collective.ptg.bootstrapcarousel
+    collective.ptg.contentleadimage
+    collective.ptg.flickr
+    collective.ptg.galleryfolder
+    collective.ptg.galleryimage
+    collective.ptg.garagedoor
+    collective.ptg.picasa
+    collective.ptg.quicksand
+    collective.ptg.shufflegallery
+    collective.ptg.simplegallery
+#    collective.js.supersized
 
 ################# JQuery.ui's themeroller tools
     zettwerk.ui
@@ -217,3 +254,6 @@ medialog.googlefonts = svn http://svn.plone.org/svn/collective/medialog.googlefo
 Products.Doormat = git https://github.com/collective/Products.Doormat.git
 #ploomcake.theme_collection_accessibility = git https://github.com/ploomcake/ploomcake.theme_collection_accessibility.git
 
+################# Plone True Gallery
+collective.js.supersized = git https://github.com/collective/collective.js.supersized.git
+collective.easyslider = git https://github.com/collective/collective.easyslider.git
