--- a/versions.cfg
+++ b/versions.cfg
@@ -90,6 +90,60 @@ collective.behavior.localskin = 0.9.2
 # collective.behavior.localskin==0.9.2
 collective.behavior.localregistry = 1.0b2
 
+################# Plone True Gallery
+collective.js.supersized = 0.3.3
+collective.easyslider = 1.3.7
+collective.plonetruegallery = 3.3.2
+collective.ptg.allnewest = 1.2.6
+collective.ptg.bootstrapcarousel = 1.0.1
+collective.ptg.carousel = 0.2.2
+collective.ptg.contactsheet = 1.1.2
+collective.ptg.contentflow = 1.0.3
+collective.ptg.contentleadimage = 1.0
+collective.ptg.easyslider = 0.5.1
+collective.ptg.fancybox = 1.0.3
+collective.ptg.flickr = 0.1.1
+collective.ptg.galleria = 1.3.0
+collective.ptg.galleriffic = 1.1.2.1
+collective.ptg.galleryfolder = 0.3
+collective.ptg.galleryimage = 1.0
+collective.ptg.garagedoor = 0.1
+collective.ptg.highslide = 1.1.1
+collective.ptg.nivogallery = 1.1
+collective.ptg.nivoslider = 1.0.6
+collective.ptg.picasa = 0.1.1
+collective.ptg.pikachoose = 1.0.4
+collective.ptg.presentation = 1.1
+collective.ptg.quicksand = 0.2.1
+collective.ptg.s3slider = 1.1
+collective.ptg.scrollable = 0.3
+collective.ptg.sheetgallery = 1.2
+collective.ptg.shufflegallery = 0.2
+collective.ptg.simplegallery = 0.5.4
+collective.ptg.supersized = 1.0.4
+collective.ptg.thumbnailzoom = 1.0.5.1
+collective.ptg.uigallery = 0.1.1
+
+# Required by:
+# collective.ptg.contentleadimage==1.0
+collective.contentleadimage = 1.3.4
+
+# Required by:
+# collective.ptg.flickr==0.1.1
+flickrapi = 1.4.2
+
+# Required by:
+# collective.ptg.picasa==0.1.1
+gdata = 2.0.18
+
+# Required by:
+# wildcard.foldercontents==1.2.4
+jarn.jsi18n = 0.11
+
+# Required by:
+# collective.ptg.galleryfolder==0.3
+wildcard.foldercontents = 1.2.4
+
 ################# jQueryMobile's themeroller tools
 zettwerk.mobile = 0.2.1
 
