Added more products versions, and new buildout configurations

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,7 +25,7 @@ eggs +=
     five.pt
     ${buildout:auto-checkout}
 
-zcml =
+zcml +=
 
 unzip = true
 versions = versions
@@ -33,7 +33,7 @@ versions = versions
 [instance]
 recipe = plone.recipe.zope2instance
 user = admin:admin
-http-address = 8080
+http-address = 8081
 verbose-security = off
 debug-mode = off
 event-log-level = info
