--- a/themes.cfg
+++ b/themes.cfg
@@ -43,7 +43,7 @@ auto-checkout =
 #    beyondskins.lostkatana
 #    beyondskins.minimalist
 
-# Diazo theme with CSS Framework
+################# Diazo theme with CSS Framework
     diazoframework.amazium
     diazoframework.baseline
     diazoframework.bootstrap
@@ -110,9 +110,15 @@ eggs =
     collective.behavior.localdiazo
     collective.behavior.localskin
     openmultimedia.headband
+    Products.ContentWellPortlets
+#    quintagroup.portletmanager.footer
+    webcouturier.dropdownmenu
+
+################# Slider Tag
+    collective.easyslider
+    collective.easytemplate
 
 ################# Plone True Gallery
-    collective.easyslider
     collective.plonetruegallery
     collective.ptg.highslide
     collective.ptg.fancybox
@@ -154,6 +160,14 @@ eggs =
 ################# jQueryMobile's themeroller tools
     zettwerk.mobile
 
+zcml =
+################# Theming tools
+    Products.ContentWellPortlets
+#    quintagroup.portletmanager.footer
+
+
+# Put your mr.developer managed source code repositories here, see
+# http://pypi.python.org/pypi/mr.developer for details on format for this part
 [sources]
 ################# Generic Diazo themes
 #chalkboardtheme_plone = git https://github.com/tkimnguyen/chalkboardtheme_plone.git
@@ -256,4 +270,6 @@ Products.Doormat = git https://github.com/collective/Products.Doormat.git
 
 ################# Plone True Gallery
 collective.js.supersized = git https://github.com/collective/collective.js.supersized.git
+
+################# Slider Tag
 collective.easyslider = git https://github.com/collective/collective.easyslider.git
