--- a/versions.cfg
+++ b/versions.cfg
@@ -1,12 +1,13 @@
 [versions]
 
-################# Plone skins theme
+################# Plone theme skins
 quintagroup.theme.estatelite = 6.0.6
 quintagroup.theme.lite = 6.0.4
 quintagroup.theme.techlight = 6.0.6
 quintagroup.theme.whiteblack = 6.0.3
 
-# plumigreen, quintagroup.theme.sunrain
+# plonetheme.plumigreen
+# quintagroup.theme.sunrain
 
 # Required by:
 # plonetheme.plumigreen==0.1
@@ -17,11 +18,12 @@ plone.app.themingplugins = 1.0b1
 # plone.app.themingplugins==1.0b1
 z3c.jbot = 0.7.1
 
-# trantor
+# plonetheme.trantor
 # Required by:
 # plonetheme.trantor==1.0
 webcouturier.dropdownmenu = 2.3.1
 
+################# Custom Diazo themes
 # plonetheme.zopeorg
 odict = 1.5.1
 
@@ -54,7 +56,9 @@ plumber = 1.2
 collective.fontawesome = 1.0.2
 medialog.googlefonts = 1.3.1
 openmultimedia.headband = 1.0b1
+Products.ContentWellPortlets = 4.1.0
 
+################# Cover
 collective.cover = 1.0a9
 plone.tiles = 1.2
 
@@ -82,6 +86,7 @@ plone.app.drafts = 1.0a2
 # collective.cover==1.0a9
 plone.app.tiles = 1.0.1
 
+################# Dexterity Behavior
 collective.behavior.localdiazo = 1.0b3
 collective.behavior.localskin = 0.9.2
 
@@ -90,9 +95,17 @@ collective.behavior.localskin = 0.9.2
 # collective.behavior.localskin==0.9.2
 collective.behavior.localregistry = 1.0b2
 
+################# Slider Tag
+collective.easyslider = 1.3.7
+MarkupSafe = 0.23
+collective.easytemplate = 0.8.0
+
+# Required by:
+# collective.easytemplate==0.8.0
+collective.templateengines = 0.3.5
+
 ################# Plone True Gallery
 collective.js.supersized = 0.3.3
-collective.easyslider = 1.3.7
 collective.plonetruegallery = 3.3.2
 collective.ptg.allnewest = 1.2.6
 collective.ptg.bootstrapcarousel = 1.0.1
