Added support for kombinat.decogrid

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,6 +18,7 @@ find-links =
 parts =
     instance
     instance-sitecustomize
+    decogrid
     zopepy
 
 eggs +=
@@ -55,6 +56,10 @@ mode = 600
 input = inline:
     import sys
     sys.setdefaultencoding('utf-8')
+
+[decogrid]
+recipe = zc.recipe.egg
+eggs = kombinat.decogrid
 
 [zopepy]
 recipe = zc.recipe.egg
