--- a/versions.cfg
+++ b/versions.cfg
@@ -57,6 +57,7 @@ collective.fontawesome = 1.0.2
 medialog.googlefonts = 1.3.1
 openmultimedia.headband = 1.0b1
 Products.ContentWellPortlets = 4.1.0
+kombinat.decogrid = 0.3
 
 ################# Cover
 collective.cover = 1.0a9
