Updated new urls repos

--- a/themes.cfg
+++ b/themes.cfg
@@ -180,15 +180,15 @@ plonetheme.codapress = git https://github.com/collective/plonetheme.codapress.gi
 plonetheme.coolblue = git https://github.com/collective/plonetheme.coolblue.git
 plonetheme.darkened = git https://github.com/collective/plonetheme.darkened.git
 plonetheme.diazo_sunburst = git https://github.com/aclark4life/plonetheme.diazo_sunburst.git
-plonetheme.discovery = git https://github.com/giacomos/plonetheme.discovery.git
+plonetheme.discovery = git https://github.com/collective/plonetheme.discovery.git
 plonetheme.earthlingtwo = svn http://svn.plone.org/svn/collective/plonetheme.earthlingtwo/trunk/
-plonetheme.evergreen = git https://github.com/giacomos/plonetheme.evergreen.git
-plonetheme.flowerbuds = git https://github.com/toutpt/plonetheme.flowerbuds.git
+plonetheme.evergreen = git https://github.com/collective/plonetheme.evergreen.gi
+plonetheme.flowerbuds = git https://github.com/collective/plonetheme.flowerbuds.git
 plonetheme.freshpick = git https://github.com/collective/plonetheme.freshpick.git
 #plonetheme.gestured = git https://github.com/dante1987/plonetheme.gestured.git
 plonetheme.grungeera = git https://github.com/collective/plonetheme.grungeera.git
 plonetheme.keepitsimple = git https://github.com/collective/plonetheme.keepitsimple.git
-plonetheme.leavesdew = git https://github.com/giacomos/plonetheme.leavesdew.git
+plonetheme.leavesdew = git https://github.com/collective/plonetheme.leavesdew.git
 plonetheme.motion = git https://github.com/davilima6/plonetheme.motion.git
 plonetheme.redmusic = git https://github.com/giacomos/plonetheme.redmusic.git
 plonetheme.pythonmexico = git https://github.com/PythonMexico/plonetheme.pythonmexico.git
