Added pre-processor CSS Less products

--- a/themes.cfg
+++ b/themes.cfg
@@ -76,6 +76,10 @@ auto-checkout =
     diazotheme.skeleton
 #    diazotheme.startup
 
+################# pre-processor CSS Less
+    collective.lesscss
+    example.bootstrap
+
 ################# Plone theme skins
     quintagroup.theme.sunrain
     quintagroup.theme.schools
@@ -229,6 +233,7 @@ diazotheme.purecss = git https://github.com/TH-code/diazotheme.purecss.git
 diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
 #diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
 
+
 ################# CSS Framework as Diazo resources
 diazoframework.amazium = git https://github.com/TH-code/diazoframework.amazium.git
 #diazoframework.baseline = git https://github.com/TH-code/diazoframework.baseline.git
@@ -249,6 +254,10 @@ diazotheme.framework.ivory = git https://github.com/TH-code/diazotheme.framework
 diazotheme.framework.metro = git https://github.com/TH-code/diazotheme.framework.metro.git
 diazotheme.framework.wirefy = git https://github.com/TH-code/diazotheme.framework.wirefy.git
 diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework.yaml4.git
+
+################# pre-processor CSS Less
+collective.lesscss = git https://github.com/collective/collective.lesscss.git
+example.bootstrap = git https://github.com/sneridagh/example.bootstrap.git
 
 ################# Plone theme skins
 quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme.sunrain.git
