Added support for Megamenu with collective.megadrop product

--- a/themes.cfg
+++ b/themes.cfg
@@ -96,6 +96,7 @@ auto-checkout =
 ################# Theming tools
 #    medialog.googlefonts
     Products.Doormat
+    collective.megadrop
 
 ################# Plone True Gallery
     collective.js.supersized
@@ -275,6 +276,7 @@ plonetheme.zopeorg = git https://github.com/d2m/plonetheme.zopeorg.git
 ################# Theming tools
 medialog.googlefonts = svn http://svn.plone.org/svn/collective/medialog.googlefonts/trunk/
 Products.Doormat = git https://github.com/collective/Products.Doormat.git
+collective.megadrop = git https://github.com/lukebrannon/collective.megadrop.git
 #ploomcake.theme_collection_accessibility = git https://github.com/ploomcake/ploomcake.theme_collection_accessibility.git
 
 ################# Plone True Gallery
