Added more jQuery extensions support

--- a/themes.cfg
+++ b/themes.cfg
@@ -101,6 +101,16 @@ auto-checkout =
 ################# Plone True Gallery
     collective.js.supersized
 
+################# JQuery.ui's themeroller tools
+    zettwerk.ui
+
+################# jQueryMobile's themeroller tools
+    zettwerk.mobile
+
+################# Mobile Theming tools
+    zettwerk.mobiletheming
+    medialog.mobilethemeTwo
+
 eggs = 
 ################# Plone theme skins
     quintagroup.theme.estatelite
@@ -155,15 +165,6 @@ eggs =
     collective.ptg.shufflegallery
     collective.ptg.simplegallery
 #    collective.js.supersized
-
-################# JQuery.ui's themeroller tools
-    zettwerk.ui
-
-################# Mobile Theming tools
-    zettwerk.mobiletheming
-
-################# jQueryMobile's themeroller tools
-    zettwerk.mobile
 
 zcml =
 ################# Theming tools
@@ -284,3 +285,13 @@ collective.js.supersized = git https://github.com/collective/collective.js.super
 
 ################# Slider Tag
 collective.easyslider = git https://github.com/collective/collective.easyslider.git
+
+################# JQuery.ui's themeroller tools
+zettwerk.ui = git https://github.com/collective/zettwerk.ui.git
+
+################# jQueryMobile's themeroller tools
+zettwerk.mobile = git https://github.com/collective/zettwerk.mobile.git
+
+################# Mobile Theming tools
+zettwerk.mobiletheming = git https://github.com/collective/zettwerk.mobiletheming.git
+medialog.mobilethemeTwo = git https://github.com/espenmn/medialog.mobilethemeTwo.git
