--- a/themes.cfg
+++ b/themes.cfg
@@ -97,6 +97,7 @@ auto-checkout =
 #    medialog.googlefonts
     Products.Doormat
     collective.megadrop
+    kombinat.decogrid
 
 ################# Plone True Gallery
     collective.js.supersized
@@ -278,6 +279,7 @@ plonetheme.zopeorg = git https://github.com/d2m/plonetheme.zopeorg.git
 medialog.googlefonts = svn http://svn.plone.org/svn/collective/medialog.googlefonts/trunk/
 Products.Doormat = git https://github.com/collective/Products.Doormat.git
 collective.megadrop = git https://github.com/lukebrannon/collective.megadrop.git
+kombinat.decogrid = git https://github.com/collective/kombinat.decogrid.git
 #ploomcake.theme_collection_accessibility = git https://github.com/ploomcake/ploomcake.theme_collection_accessibility.git
 
 ################# Plone True Gallery
