Added more skels for themes #11

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,6 +20,7 @@ parts =
     instance-sitecustomize
     decogrid
     zopepy
+    scripts
 
 eggs +=
     experimental.btree
@@ -67,6 +68,18 @@ eggs = ${instance:eggs}
 interpreter = zopepy
 scripts = zopepy
 
+[scripts]
+recipe = zc.recipe.egg
+eggs =
+    ZopeSkel
+    PasteScript
+    PasteDeploy
+    Paste
+    zopeskel.diazotheme
+    vs.zopeskel.diazo
+    toutpt.zopeskel
+    zest.releaser
+
 [versions]
 # buildout extensions
 buildout.threatlevel = 1.1
@@ -77,3 +90,10 @@ experimental.btree = 1.1
 five.pt = 2.2.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
+
+# ZopeSkel
+ZopeSkel = 2.21.2
+Cheetah = 2.2.1
+zopeskel.diazotheme = 1.1
+toutpt.zopeskel = 1.3.3
+vs.zopeskel.diazo = 1.0
