Added support for Mobile Theming tools

--- a/themes.cfg
+++ b/themes.cfg
@@ -167,11 +167,16 @@ eggs =
     collective.ptg.simplegallery
 #    collective.js.supersized
 
+################# Mobile Theming tools
+    uwosh.mobile.tools
+
 zcml =
 ################# Theming tools
     Products.ContentWellPortlets
 #    quintagroup.portletmanager.footer
 
+################# Mobile Theming tools
+    uwosh.mobile.tools
 
 # Put your mr.developer managed source code repositories here, see
 # http://pypi.python.org/pypi/mr.developer for details on format for this part
