--- a/versions.cfg
+++ b/versions.cfg
@@ -163,6 +163,23 @@ zettwerk.mobile = 0.2.1
 
 ################# Mobile Theming tools
 zettwerk.mobiletheming = 0.2
+uwosh.mobile.tools = 0.0.2
+
+# Required by:
+# medialog.mobilethemeTwo==0.7.1.2
+ftw.mobilenavigation = 1.4.1
+
+# Required by:
+# ftw.mobilenavigation==1.4.1
+ftw.upgrade = 1.10.0
+
+# Required by:
+# ftw.upgrade==1.10.0
+tarjan = 0.1.2
+
+# Required by:
+# uwosh.mobile.tools==0.0.2
+lxml = 2.2.8
 
 ################# JQuery.ui's themeroller tools
 zettwerk.ui = 2.0
