Added Bootstrap utilities #12

--- a/themes.cfg
+++ b/themes.cfg
@@ -119,6 +119,9 @@ eggs =
     quintagroup.theme.techlight
     quintagroup.theme.whiteblack
 
+################# Diazo theme with CSS Framework
+    vs.bootstrap.tinymce
+
 ################# Theming tools
     collective.cover
     collective.fontawesome
