--- a/versions.cfg
+++ b/versions.cfg
@@ -52,6 +52,9 @@ node = 0.9.11
 # node==0.9.11
 plumber = 1.2
 
+################# Diazo theme with CSS Framework
+vs.bootstrap.tinymce = 1.0.3
+
 ################# Theming tools
 collective.fontawesome = 1.0.2
 medialog.googlefonts = 1.3.1
