evergreen theme git repository correction

--- a/themes.cfg
+++ b/themes.cfg
@@ -197,7 +197,7 @@ plonetheme.darkened = git https://github.com/collective/plonetheme.darkened.git
 plonetheme.diazo_sunburst = git https://github.com/aclark4life/plonetheme.diazo_sunburst.git
 plonetheme.discovery = git https://github.com/collective/plonetheme.discovery.git
 plonetheme.earthlingtwo = svn http://svn.plone.org/svn/collective/plonetheme.earthlingtwo/trunk/
-plonetheme.evergreen = git https://github.com/collective/plonetheme.evergreen.gi
+plonetheme.evergreen = git https://github.com/collective/plonetheme.evergreen.git
 plonetheme.flowerbuds = git https://github.com/collective/plonetheme.flowerbuds.git
 plonetheme.freshpick = git https://github.com/collective/plonetheme.freshpick.git
 #plonetheme.gestured = git https://github.com/dante1987/plonetheme.gestured.git
