Added omelette recipe configuration

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,6 +21,7 @@ parts =
     instance-sitecustomize
     decogrid
     zopepy
+    omelette
     scripts
 
 eggs +=
@@ -68,6 +69,14 @@ recipe = zc.recipe.egg
 eggs = ${instance:eggs}
 interpreter = zopepy
 scripts = zopepy
+
+# symlinks all Python source code to parts/omelette folder when buildout is run
+# windows users will need to install additional software for this part to build
+# correctly.  See http://pypi.python.org/pypi/collective.recipe.omelette for
+# relevant details.
+[omelette]
+recipe = collective.recipe.omelette
+eggs = ${instance:eggs}
 
 [scripts]
 recipe = zc.recipe.egg
