Fixed issue #76 disabling the version from Github by the package version of collective.js.supersized distributed from PyPI, also updated version from 0.3.3 to 0.4.3 for the current version of Plone 4.3.11

--- a/themes.cfg
+++ b/themes.cfg
@@ -100,7 +100,7 @@ auto-checkout =
     kombinat.decogrid
 
 ################# Plone True Gallery
-    collective.js.supersized
+#    collective.js.supersized
 
 ################# JQuery.ui's themeroller tools
     zettwerk.ui
@@ -168,7 +168,7 @@ eggs =
     collective.ptg.quicksand
     collective.ptg.shufflegallery
     collective.ptg.simplegallery
-#    collective.js.supersized
+    collective.js.supersized
 
 ################# Mobile Theming tools
     uwosh.mobile.tools
@@ -291,7 +291,7 @@ kombinat.decogrid = git https://github.com/collective/kombinat.decogrid.git
 #ploomcake.theme_collection_accessibility = git https://github.com/ploomcake/ploomcake.theme_collection_accessibility.git
 
 ################# Plone True Gallery
-collective.js.supersized = git https://github.com/collective/collective.js.supersized.git
+#collective.js.supersized = git https://github.com/collective/collective.js.supersized.git
 
 ################# Slider Tag
 collective.easyslider = git https://github.com/collective/collective.easyslider.git
