Migrated plonetheme.earthlingtwo from SVN Collective repo to Github Collective repo

--- a/themes.cfg
+++ b/themes.cfg
@@ -196,7 +196,7 @@ plonetheme.coolblue = git https://github.com/collective/plonetheme.coolblue.git
 plonetheme.darkened = git https://github.com/collective/plonetheme.darkened.git
 plonetheme.diazo_sunburst = git https://github.com/aclark4life/plonetheme.diazo_sunburst.git
 plonetheme.discovery = git https://github.com/collective/plonetheme.discovery.git
-plonetheme.earthlingtwo = svn http://svn.plone.org/svn/collective/plonetheme.earthlingtwo/trunk/
+plonetheme.earthlingtwo = git https://github.com/collective/plonetheme.earthlingtwo.git
 plonetheme.evergreen = git https://github.com/collective/plonetheme.evergreen.git
 plonetheme.flowerbuds = git https://github.com/collective/plonetheme.flowerbuds.git
 plonetheme.freshpick = git https://github.com/collective/plonetheme.freshpick.git
