Migrated medialog.googlefonts from SVN Collective repo to Github Collective repo

--- a/themes.cfg
+++ b/themes.cfg
@@ -284,7 +284,7 @@ plonetheme.unam = git https://github.com/imatem/plonetheme.unam.git
 plonetheme.zopeorg = git https://github.com/d2m/plonetheme.zopeorg.git
 
 ################# Theming tools
-medialog.googlefonts = svn http://svn.plone.org/svn/collective/medialog.googlefonts/trunk/
+medialog.googlefonts = git https://github.com/collective/medialog.googlefonts.git
 Products.Doormat = git https://github.com/collective/Products.Doormat.git
 collective.megadrop = git https://github.com/collective/collective.megadrop.git
 kombinat.decogrid = git https://github.com/collective/kombinat.decogrid.git
