issue #75 Temporally commenting uwosh.mobile.tools packages while the owner package releases the source code on github.com/uwosh

--- a/themes.cfg
+++ b/themes.cfg
@@ -171,7 +171,7 @@ eggs =
     collective.js.supersized
 
 ################# Mobile Theming tools
-    uwosh.mobile.tools
+#    uwosh.mobile.tools
 
 zcml =
 ################# Theming tools
@@ -179,7 +179,7 @@ zcml =
 #    quintagroup.portletmanager.footer
 
 ################# Mobile Theming tools
-    uwosh.mobile.tools
+#    uwosh.mobile.tools
 
 # Put your mr.developer managed source code repositories here, see
 # http://pypi.python.org/pypi/mr.developer for details on format for this part
