Added i18ndude package

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,6 +23,7 @@ parts =
     zopepy
     omelette
     scripts
+    i18ndude
 
 eggs +=
     experimental.btree
@@ -90,9 +91,17 @@ eggs =
     toutpt.zopeskel
     zest.releaser
 
+[i18ndude]
+recipe = zc.recipe.egg
+unzip = true
+eggs = i18ndude
+
 [versions]
 # buildout extensions
 buildout.threatlevel = 1.1
+
+# development base
+i18ndude = 4.4.0
 
 # Chameleon
 Chameleon = 2.13
