Updated buildout base configurations

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -97,6 +97,12 @@ unzip = true
 eggs = i18ndude
 
 [versions]
+# buildout base
+setuptools = 26.1.1
+zc.buildout = 1.7.1
+pytz = 2018.4
+docutils = 0.14
+
 # buildout extensions
 buildout.threatlevel = 1.1
 
