--- a/themes.cfg
+++ b/themes.cfg
@@ -194,8 +194,9 @@ zcml =
 ################# Mobile Theming tools
 #    uwosh.mobile.tools
 
+
 # Put your mr.developer managed source code repositories here, see
-# http://pypi.python.org/pypi/mr.developer for details on format for this part
+# https://pypi.org/project/mr.developer for details on format for this part
 [sources]
 ################# Generic Diazo themes
 #chalkboardtheme_plone = git https://github.com/tkimnguyen/chalkboardtheme_plone.git
