Added collective.fontawesome package latest version from github

--- a/themes.cfg
+++ b/themes.cfg
@@ -95,6 +95,7 @@ auto-checkout =
     plonetheme.zopeorg
 
 ################# Theming tools
+    collective.fontawesome
 #    medialog.googlefonts
     Products.Doormat
     collective.megadrop
@@ -308,6 +309,7 @@ plonetheme.unam = git https://github.com/imatem/plonetheme.unam.git
 plonetheme.zopeorg = git https://github.com/d2m/plonetheme.zopeorg.git
 
 ################# Theming tools
+collective.fontawesome = git https://github.com/collective/collective.fontawesome.git
 medialog.googlefonts = git https://github.com/collective/medialog.googlefonts.git
 Products.Doormat = git https://github.com/collective/Products.Doormat.git
 collective.megadrop = git https://github.com/collective/collective.megadrop.git
