--- a/versions.cfg
+++ b/versions.cfg
@@ -56,7 +56,7 @@ plumber = 1.2
 vs.bootstrap.tinymce = 1.0.3
 
 ################# Theming tools
-collective.fontawesome = 1.0.2
+# collective.fontawesome = 1.0.5
 medialog.googlefonts = 1.3.1
 openmultimedia.headband = 1.0b1
 Products.ContentWellPortlets = 4.1.0
