Added medialog.googlefonts package latest version from github

--- a/themes.cfg
+++ b/themes.cfg
@@ -96,7 +96,7 @@ auto-checkout =
 
 ################# Theming tools
     collective.fontawesome
-#    medialog.googlefonts
+    medialog.googlefonts
     Products.Doormat
     collective.megadrop
     kombinat.decogrid
