--- a/versions.cfg
+++ b/versions.cfg
@@ -57,7 +57,7 @@ vs.bootstrap.tinymce = 1.0.3
 
 ################# Theming tools
 # collective.fontawesome = 1.0.5
-medialog.googlefonts = 1.3.1
+# medialog.googlefonts = 2.2.2
 openmultimedia.headband = 1.0b1
 Products.ContentWellPortlets = 4.1.0
 kombinat.decogrid = 0.3
