Added the medialog.mobilethemeOne package

--- a/themes.cfg
+++ b/themes.cfg
@@ -112,6 +112,7 @@ auto-checkout =
 
 ################# Mobile Theming tools
     zettwerk.mobiletheming
+    medialog.mobilethemeOne
     medialog.mobilethemeTwo
 
 eggs = 
@@ -330,4 +331,5 @@ zettwerk.mobile = git https://github.com/collective/zettwerk.mobile.git
 
 ################# Mobile Theming tools
 zettwerk.mobiletheming = git https://github.com/collective/zettwerk.mobiletheming.git
+medialog.mobilethemeOne = git https://github.com/espenmn/medialog.mobilethemeOne.git
 medialog.mobilethemeTwo = git https://github.com/espenmn/medialog.mobilethemeTwo.git
