Added the medialog.mobilethemeThree package

--- a/themes.cfg
+++ b/themes.cfg
@@ -114,6 +114,7 @@ auto-checkout =
     zettwerk.mobiletheming
     medialog.mobilethemeOne
     medialog.mobilethemeTwo
+    medialog.mobilethemeThree
 
 eggs = 
 ################# Beyondskins Diazo themes
@@ -333,3 +334,4 @@ zettwerk.mobile = git https://github.com/collective/zettwerk.mobile.git
 zettwerk.mobiletheming = git https://github.com/collective/zettwerk.mobiletheming.git
 medialog.mobilethemeOne = git https://github.com/espenmn/medialog.mobilethemeOne.git
 medialog.mobilethemeTwo = git https://github.com/espenmn/medialog.mobilethemeTwo.git
+medialog.mobilethemeThree = git https://github.com/espenmn/medialog.mobilethemeThree.git
