--- a/themes.cfg
+++ b/themes.cfg
@@ -33,16 +33,16 @@ auto-checkout =
     plonetheme.yoko
 
 ################# Beyondskins Diazo themes
-#    beyondskins.beyondskins
-#    beyondskins.brasilia
-#    beyondskins.colors
-#    beyondskins.happy
-#    beyondskins.lostkatana
+    beyondskins.beyondskins
+    beyondskins.brasilia
+    beyondskins.colors
+    beyondskins.happy
+    beyondskins.lostkatana
     beyondskins.minimalist
-#    beyondskins.responsive
-#    beyondskins.sports
-#    beyondskins.sunflower
-#    beyondskins.phantasmagoria
+    beyondskins.responsive
+    beyondskins.sports
+    beyondskins.sunflower
+    beyondskins.phantasmagoria
 
 ################# Diazo theme with CSS Framework
     diazoframework.amazium
@@ -221,25 +221,15 @@ plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexper
 plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 
 ################# Beyondskins Diazo themes
-#beyondskins.beyondskins = git https://github.com/simplesconsultoria/beyondskins.beyondskins.git
 beyondskins.beyondskins = git https://github.com/plone-ve/beyondskins.beyondskins.git
-#beyondskins.brasilia = git https://github.com/simplesconsultoria/beyondskins.brasilia.git
 beyondskins.brasilia = git https://github.com/plone-ve/beyondskins.brasilia.git
-#beyondskins.colors = git https://github.com/simplesconsultoria/beyondskins.colors.git
 beyondskins.colors = git https://github.com/plone-ve/beyondskins.colors.git
-#beyondskins.happy = git https://github.com/simplesconsultoria/beyondskins.happy.git
 beyondskins.happy = git https://github.com/plone-ve/beyondskins.happy.git
-#beyondskins.lostkatana = git https://github.com/simplesconsultoria/beyondskins.lostkatana.git
 beyondskins.lostkatana = git https://github.com/plone-ve/beyondskins.lostkatana.git
-#beyondskins.minimalist = git https://github.com/simplesconsultoria/beyondskins.minimalist.git
 beyondskins.minimalist = git https://github.com/plone-ve/beyondskins.minimalist.git
-#beyondskins.responsive = git https://github.com/simplesconsultoria/beyondskins.responsive.git
 beyondskins.responsive = git https://github.com/plone-ve/beyondskins.responsive.git
-#beyondskins.sports = git https://github.com/simplesconsultoria/beyondskins.sports.git
 beyondskins.sports = git https://github.com/plone-ve/beyondskins.sports.git
-#beyondskins.sunflower = git https://github.com/simplesconsultoria/beyondskins.sunflower.git
 beyondskins.sunflower = git https://github.com/plone-ve/beyondskins.sunflower.git
-#beyondskins.phantasmagoria = git https://github.com/simplesconsultoria/beyondskins.phantasmagoria.git
 beyondskins.phantasmagoria = git https://github.com/plone-ve/beyondskins.phantasmagoria.git
 
 ################# Diazo theme with CSS Framework
