Added more Beyondskins Diazo themes

--- a/themes.cfg
+++ b/themes.cfg
@@ -37,12 +37,17 @@ auto-checkout =
     beyondskins.brasilia
     beyondskins.colors
     beyondskins.happy
+#    beyondskins.html5
     beyondskins.lostkatana
     beyondskins.minimalist
+#    beyondskins.pb9.site
+    beyondskins.phantasmagoria
+#    beyondskins.plaza
     beyondskins.responsive
+#    beyondskins.s17
     beyondskins.sports
     beyondskins.sunflower
-    beyondskins.phantasmagoria
+#    beyondskins.twentythirteen
 
 ################# Diazo theme with CSS Framework
     diazoframework.amazium
@@ -225,12 +230,17 @@ beyondskins.beyondskins = git https://github.com/plone-ve/beyondskins.beyondskin
 beyondskins.brasilia = git https://github.com/plone-ve/beyondskins.brasilia.git
 beyondskins.colors = git https://github.com/plone-ve/beyondskins.colors.git
 beyondskins.happy = git https://github.com/plone-ve/beyondskins.happy.git
+beyondskins.html5 = git https://github.com/plone-ve/beyondskins.html5.git
 beyondskins.lostkatana = git https://github.com/plone-ve/beyondskins.lostkatana.git
 beyondskins.minimalist = git https://github.com/plone-ve/beyondskins.minimalist.git
+beyondskins.pb9.site = git https://github.com/plone-ve/beyondskins.pb9.site.git
+beyondskins.phantasmagoria = git https://github.com/plone-ve/beyondskins.phantasmagoria.git
+beyondskins.plaza = git https://github.com/plone-ve/beyondskins.plaza.git
 beyondskins.responsive = git https://github.com/plone-ve/beyondskins.responsive.git
+beyondskins.s17 = git https://github.com/plone-ve/beyondskins.s17.git
 beyondskins.sports = git https://github.com/plone-ve/beyondskins.sports.git
 beyondskins.sunflower = git https://github.com/plone-ve/beyondskins.sunflower.git
-beyondskins.phantasmagoria = git https://github.com/plone-ve/beyondskins.phantasmagoria.git
+beyondskins.twentythirteen = git https://github.com/plone-ve/beyondskins.twentythirteen.git
 
 ################# Diazo theme with CSS Framework
 diazotheme.amazium = git https://github.com/TH-code/diazotheme.amazium.git
