Disabled plonetheme.yoko theme

--- a/themes.cfg
+++ b/themes.cfg
@@ -30,7 +30,7 @@ auto-checkout =
     plonetheme.unilluminated
     plonetheme.transition
     plonetheme.woodexperience
-    plonetheme.yoko
+#    plonetheme.yoko
 
 ################# Beyondskins Diazo themes
     beyondskins.beyondskins
@@ -223,7 +223,7 @@ plonetheme.unbound11 = git https://github.com/a-pasquale/plonetheme.unbound11.gi
 plonetheme.unilluminated = git https://github.com/collective/plonetheme.unilluminated.git
 plonetheme.transition = git https://github.com/gyst/plonetheme.transition.git
 plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexperience.git
-plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
+#plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 
 ################# Beyondskins Diazo themes
 beyondskins.beyondskins = git https://github.com/plone-ve/beyondskins.beyondskins.git
