Changed the urls repositories

--- a/themes.cfg
+++ b/themes.cfg
@@ -320,6 +320,6 @@ zettwerk.mobile = git https://github.com/collective/zettwerk.mobile.git
 
 ################# Mobile Theming tools
 zettwerk.mobiletheming = git https://github.com/collective/zettwerk.mobiletheming.git
-medialog.mobilethemeOne = git https://github.com/espenmn/medialog.mobilethemeOne.git
-medialog.mobilethemeTwo = git https://github.com/espenmn/medialog.mobilethemeTwo.git
-medialog.mobilethemeThree = git https://github.com/espenmn/medialog.mobilethemeThree.git
+medialog.mobilethemeOne = git https://github.com/plone-ve/medialog.mobilethemeOne.git
+medialog.mobilethemeTwo = git https://github.com/plone-ve/medialog.mobilethemeTwo.git
+medialog.mobilethemeThree = git https://github.com/plone-ve/medialog.mobilethemeThree.git
