changed order the PTG packages

--- a/themes.cfg
+++ b/themes.cfg
@@ -148,35 +148,35 @@ eggs =
 
 ################# Plone True Gallery
     collective.plonetruegallery
-    collective.ptg.highslide
-    collective.ptg.fancybox
-    collective.ptg.galleriffic
-    collective.ptg.s3slider
-    collective.ptg.pikachoose
-    collective.ptg.nivoslider
-    collective.ptg.nivogallery
-    collective.ptg.contentflow
-    collective.ptg.supersized
-    collective.ptg.thumbnailzoom
-    collective.ptg.contactsheet
-    collective.ptg.galleria
-    collective.ptg.carousel
-    collective.ptg.uigallery
-    collective.ptg.sheetgallery
-    collective.ptg.scrollable
-    collective.ptg.presentation
     collective.ptg.allnewest
-    collective.ptg.easyslider
     collective.ptg.bootstrapcarousel
-    collective.ptg.contentleadimage
+    collective.ptg.carousel
+    collective.ptg.contentflow
+    collective.ptg.contentlea
+    collective.ptg.contactsheet
+    collective.ptg.easyslider
+    collective.ptg.fancybox
     collective.ptg.flickr
+    collective.ptg.galleriffic
+    collective.ptg.galleriadimage
     collective.ptg.galleryfolder
     collective.ptg.galleryimage
     collective.ptg.garagedoor
+    collective.ptg.highslide
+    collective.ptg.nivogallery
+    collective.ptg.nivoslider
     collective.ptg.picasa
+    collective.ptg.pikachoose
+    collective.ptg.presentation
     collective.ptg.quicksand
-    collective.ptg.shufflegallery
+    collective.ptg.s3slider
     collective.ptg.simplegallery
+    collective.ptg.supersized
+    collective.ptg.sheetgallery
+    collective.ptg.scrollable
+    collective.ptg.shufflegallery
+    collective.ptg.thumbnailzoom
+    collective.ptg.uigallery
     collective.js.supersized
 
 ################# Mobile Theming tools
