Added documentation for buildout configurations

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,26 @@
 [buildout]
 
+# By default, zc.buildout doesn’t unzip zip-safe eggs packages. This 
+# follows the policy followed by setuptools itself. Experience shows 
+# this policy to to be inconvenient. Zipped eggs make debugging more 
+# difficult and often import more slowly.
+# You can include an unzip option in the buildout section to change 
+# the default unzipping policy.
+
+# It is very useful when you using the omelette recipe for debugging 
+# python eggs packages
+unzip = true
+
+# Don't download new things unless needed to satisfy dependencies.
+# Override this on the command line with the "-n" flag.
+#
+newest = false
+
+# show picked versions wherever we do an automatic choice
+#
 show-picked-versions = true
+
+versions = versions
 
 extensions =
     mr.developer
@@ -11,11 +31,22 @@ extends =
     themes.cfg
     versions.cfg
 
+
+# If you change your Plone version, you'll also need to update
+# the repository link below.
+#
 find-links =
 #    http://www.uwosh.edu/ploneprojects/software/uwosh.mobile.tools/releases/0.0.2/uwosh.mobile.tools-0.0.2.zip
     http://dist.plone.org/release/4.3-latest/
     http://dist.plone.org/thirdparty/
 
+############################################
+# Parts Specification
+#--------------------
+# Specifies the components that should be included in the buildout.
+# Most are defined in the base.cfg extension; you may add your
+# own if you need them at the end of this file.
+#
 parts =
     instance
     instance-sitecustomize
@@ -25,16 +56,30 @@ parts =
     scripts
     i18ndude
 
+
+############################################
+# Eggs
+# ----
+# Add an indented line to the eggs section for any Python
+# eggs or packages you wish to include in your Plone instance.
+#
 eggs +=
     experimental.btree
     five.pt
     ${buildout:auto-checkout}
 
+
+############################################
+# ZCML Slugs
+# ----------
+# Some eggs need ZCML slugs to tell Zope to
+# use them. This is increasingly rare.
+#
 zcml +=
 
-unzip = true
-versions = versions
 
+# See https://pypi.org/project/plone.recipe.zope2instance for
+# relevant details.
 [instance]
 recipe = plone.recipe.zope2instance
 user = admin:admin
@@ -53,6 +98,9 @@ environment-vars =
     zope_i18n_allowed_languages es
     zope_i18n_compile_mo_files false
 
+
+# See https://pypi.org/project/collective.recipe.template for
+# relevant details.
 [instance-sitecustomize]
 recipe = collective.recipe.template
 output = ${buildout:bin-directory}/sitecustomize.py
@@ -61,9 +109,11 @@ input = inline:
     import sys
     sys.setdefaultencoding('utf-8')
 
+
 [decogrid]
 recipe = zc.recipe.egg
 eggs = kombinat.decogrid
+
 
 [zopepy]
 recipe = zc.recipe.egg
@@ -71,14 +121,18 @@ eggs = ${instance:eggs}
 interpreter = zopepy
 scripts = zopepy
 
-# symlinks all Python source code to parts/omelette folder when buildout is run
+
+# The symlinks all Python source code to parts/omelette folder when buildout is run
 # windows users will need to install additional software for this part to build
-# correctly.  See http://pypi.python.org/pypi/collective.recipe.omelette for
+# correctly.  See https://pypi.org/project/collective.recipe.omelette for
 # relevant details.
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${instance:eggs}
 
+
+# See https://pypi.org/project/zc.recipe.egg for
+# relevant details.
 [scripts]
 recipe = zc.recipe.egg
 eggs =
@@ -91,10 +145,12 @@ eggs =
     toutpt.zopeskel
     zest.releaser
 
+
 [i18ndude]
 recipe = zc.recipe.egg
 unzip = true
 eggs = i18ndude
+
 
 [versions]
 # buildout base
