--- a/themes.cfg
+++ b/themes.cfg
@@ -50,14 +50,15 @@ auto-checkout =
     beyondskins.sunflower
 #    beyondskins.twentythirteen
 
-################# Diazo theme with CSS Framework
+
+################# Diazo Framework resources for CSS Frameworks
+    diazoframework.plone
     diazoframework.amazium
     diazoframework.baseline
     diazoframework.bootstrap
     diazoframework.foundation
     diazoframework.goldilocks
     diazoframework.kube
-    diazoframework.plone
     diazoframework.purecss
     diazoframework.skeleton
 
@@ -277,7 +278,8 @@ diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
 #diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
 
 
-################# CSS Framework as Diazo resources
+################# Diazo Framework resources for CSS Frameworks
+diazoframework.plone = git https://github.com/TH-code/diazoframework.plone.git
 diazoframework.amazium = git https://github.com/TH-code/diazoframework.amazium.git
 #diazoframework.baseline = git https://github.com/TH-code/diazoframework.baseline.git
 diazoframework.baseline = git https://github.com/Covantec/diazoframework.baseline.git
@@ -285,7 +287,6 @@ diazoframework.bootstrap = git https://github.com/TH-code/diazoframework.bootstr
 diazoframework.foundation = git https://github.com/TH-code/diazoframework.foundation.git
 diazoframework.goldilocks = git https://github.com/TH-code/diazoframework.goldilocks.git
 diazoframework.kube = git https://github.com/TH-code/diazoframework.kube.git
-diazoframework.plone = git https://github.com/TH-code/diazoframework.plone.git
 diazoframework.purecss = git https://github.com/TH-code/diazoframework.purecss.git
 diazoframework.skeleton = git https://github.com/TH-code/diazoframework.skeleton.git
 
