Updated URLs repos for the diazoframework amazium css themes

--- a/themes.cfg
+++ b/themes.cfg
@@ -261,7 +261,7 @@ beyondskins.sunflower = git https://github.com/plone-ve/beyondskins.sunflower.gi
 beyondskins.twentythirteen = git https://github.com/plone-ve/beyondskins.twentythirteen.git
 
 ################# Diazo theme with CSS Framework
-diazotheme.amazium = git https://github.com/TH-code/diazotheme.amazium.git
+diazotheme.amazium = git https://github.com/plone-ve/diazotheme.amazium.git
 #diazotheme.baseline = git https://github.com/TH-code/diazotheme.baseline.git
 diazotheme.baseline = git https://github.com/Covantec/diazotheme.baseline.git
 #diazotheme.bootstrap = git https://github.com/TH-code/diazotheme.bootstrap.git
@@ -280,7 +280,7 @@ diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
 
 ################# Diazo Framework resources for CSS Frameworks
 diazoframework.plone = git https://github.com/TH-code/diazoframework.plone.git
-diazoframework.amazium = git https://github.com/TH-code/diazoframework.amazium.git
+diazoframework.amazium = git https://github.com/plone-ve/diazoframework.amazium.git
 #diazoframework.baseline = git https://github.com/TH-code/diazoframework.baseline.git
 diazoframework.baseline = git https://github.com/Covantec/diazoframework.baseline.git
 diazoframework.bootstrap = git https://github.com/TH-code/diazoframework.bootstrap.git
