--- a/themes.cfg
+++ b/themes.cfg
@@ -268,7 +268,7 @@ diazotheme.baseline = git https://github.com/Covantec/diazotheme.baseline.git
 diazotheme.bootstrap = git https://github.com/Covantec/diazotheme.bootstrap.git
 diazotheme.bootswatch = git https://github.com/TH-code/diazotheme.bootswatch.git
 #diazotheme.default = git https://github.com/TH-code/diazotheme.default.git
-diazotheme.foundation = git https://github.com/TH-code/diazotheme.foundation.git
+diazotheme.foundation = git https://github.com/plone-ve/diazotheme.foundation.git
 diazotheme.goldilocks = git https://github.com/TH-code/diazotheme.goldilocks.git
 #diazotheme.initializr = git https://github.com/TH-code/diazotheme.initializr.git
 diazotheme.kube = git https://github.com/TH-code/diazotheme.kube.git
@@ -284,7 +284,7 @@ diazoframework.amazium = git https://github.com/plone-ve/diazoframework.amazium.
 #diazoframework.baseline = git https://github.com/TH-code/diazoframework.baseline.git
 diazoframework.baseline = git https://github.com/Covantec/diazoframework.baseline.git
 diazoframework.bootstrap = git https://github.com/TH-code/diazoframework.bootstrap.git
-diazoframework.foundation = git https://github.com/TH-code/diazoframework.foundation.git
+diazoframework.foundation = git https://github.com/plone-ve/diazoframework.foundation.git
 diazoframework.goldilocks = git https://github.com/TH-code/diazoframework.goldilocks.git
 diazoframework.kube = git https://github.com/TH-code/diazoframework.kube.git
 diazoframework.purecss = git https://github.com/TH-code/diazoframework.purecss.git
