Updated URLs repos for the diazoframework plone css themes

--- a/themes.cfg
+++ b/themes.cfg
@@ -272,14 +272,14 @@ diazotheme.foundation = git https://github.com/plone-ve/diazotheme.foundation.gi
 diazotheme.goldilocks = git https://github.com/TH-code/diazotheme.goldilocks.git
 #diazotheme.initializr = git https://github.com/TH-code/diazotheme.initializr.git
 diazotheme.kube = git https://github.com/TH-code/diazotheme.kube.git
-diazotheme.plone = git https://github.com/TH-code/diazotheme.plone.git
+diazotheme.plone = git https://github.com/plone-ve/diazotheme.plone.git
 diazotheme.purecss = git https://github.com/TH-code/diazotheme.purecss.git
 diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
 #diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
 
 
 ################# Diazo Framework resources for CSS Frameworks
-diazoframework.plone = git https://github.com/TH-code/diazoframework.plone.git
+diazoframework.plone = git https://github.com/plone-ve/diazoframework.plone.git
 diazoframework.amazium = git https://github.com/plone-ve/diazoframework.amazium.git
 #diazoframework.baseline = git https://github.com/TH-code/diazoframework.baseline.git
 diazoframework.baseline = git https://github.com/Covantec/diazoframework.baseline.git
