--- a/themes.cfg
+++ b/themes.cfg
@@ -264,8 +264,7 @@ beyondskins.twentythirteen = git https://github.com/plone-ve/beyondskins.twentyt
 diazotheme.amazium = git https://github.com/plone-ve/diazotheme.amazium.git
 #diazotheme.baseline = git https://github.com/TH-code/diazotheme.baseline.git
 diazotheme.baseline = git https://github.com/Covantec/diazotheme.baseline.git
-#diazotheme.bootstrap = git https://github.com/TH-code/diazotheme.bootstrap.git
-diazotheme.bootstrap = git https://github.com/Covantec/diazotheme.bootstrap.git
+diazotheme.bootstrap = git https://github.com/plone-ve/diazotheme.bootstrap.git
 diazotheme.bootswatch = git https://github.com/TH-code/diazotheme.bootswatch.git
 #diazotheme.default = git https://github.com/TH-code/diazotheme.default.git
 diazotheme.foundation = git https://github.com/plone-ve/diazotheme.foundation.git
@@ -283,7 +282,7 @@ diazoframework.plone = git https://github.com/plone-ve/diazoframework.plone.git
 diazoframework.amazium = git https://github.com/plone-ve/diazoframework.amazium.git
 #diazoframework.baseline = git https://github.com/TH-code/diazoframework.baseline.git
 diazoframework.baseline = git https://github.com/Covantec/diazoframework.baseline.git
-diazoframework.bootstrap = git https://github.com/TH-code/diazoframework.bootstrap.git
+diazoframework.bootstrap = git https://github.com/plone-ve/diazoframework.bootstrap.git
 diazoframework.foundation = git https://github.com/plone-ve/diazoframework.foundation.git
 diazoframework.goldilocks = git https://github.com/TH-code/diazoframework.goldilocks.git
 diazoframework.kube = git https://github.com/TH-code/diazoframework.kube.git
