Updated URLs repos for the diazoframework baseline css themes

--- a/themes.cfg
+++ b/themes.cfg
@@ -262,8 +262,7 @@ beyondskins.twentythirteen = git https://github.com/plone-ve/beyondskins.twentyt
 
 ################# Diazo theme with CSS Framework
 diazotheme.amazium = git https://github.com/plone-ve/diazotheme.amazium.git
-#diazotheme.baseline = git https://github.com/TH-code/diazotheme.baseline.git
-diazotheme.baseline = git https://github.com/Covantec/diazotheme.baseline.git
+diazotheme.baseline = git https://github.com/plone-ve/diazotheme.baseline.git
 diazotheme.bootstrap = git https://github.com/plone-ve/diazotheme.bootstrap.git
 diazotheme.bootswatch = git https://github.com/TH-code/diazotheme.bootswatch.git
 #diazotheme.default = git https://github.com/TH-code/diazotheme.default.git
@@ -280,8 +279,7 @@ diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
 ################# Diazo Framework resources for CSS Frameworks
 diazoframework.plone = git https://github.com/plone-ve/diazoframework.plone.git
 diazoframework.amazium = git https://github.com/plone-ve/diazoframework.amazium.git
-#diazoframework.baseline = git https://github.com/TH-code/diazoframework.baseline.git
-diazoframework.baseline = git https://github.com/Covantec/diazoframework.baseline.git
+diazoframework.baseline = git https://github.com/plone-ve/diazoframework.baseline.git
 diazoframework.bootstrap = git https://github.com/plone-ve/diazoframework.bootstrap.git
 diazoframework.foundation = git https://github.com/plone-ve/diazoframework.foundation.git
 diazoframework.goldilocks = git https://github.com/TH-code/diazoframework.goldilocks.git
